# braid

./: Cargo.toml  LICENSE  README.md
.github/workflows/: benchmark.yaml  cargo_test.yaml  rust.yaml  rust.yml
benches/: create.rs  index.rs  insert.rs  remove.rs  slice.rs
benches/data/: cyrillic_01  cyrillic_1  cyrillic_2  unicode_01  unicode_02  unicode_trivial
dev/bench/: data.js
src/: charwidthindex.rs  charwidthmap.rs  index.rs  lib.rs  main.rs  ranged.rs  sliceable.rs  splittable.rs  strand.rs
src/index/: char_width.rs  newline.rs
