[package]
name = "braid"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
xxh3 = "0.1.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"]}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "create"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "remove"
harness = false

[[bench]]
name = "index"
harness = false
